Added an interactive form

--- a/canvass.html
+++ b/canvass.html
@@ -96,45 +96,34 @@
         </div>
     </header>
 
-    <!-- Startups -->
+    <!-- Placeholder1 -->
     <section id="startups" class="about">
         <div class="container">
-            <div class="row text-center">
-                <h2>Step 1</h2>
-                <hr class="small">
-            </div>
-
-            <!-- Project Row -->
-            <div class="row text-center">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRS_8rFmR8KlqaKgFDyItLp7QGK9Ju7ZS_jVZAzFuQ8m2k9w/viewform?embedded=true" width="600" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <div class="row">    
+                <!-- Column1 -->
+                <div class="col-sm-6 text-center">
+                    <h2>Step 1</h2>
+                    <hr class="small">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRS_8rFmR8KlqaKgFDyItLp7QGK9Ju7ZS_jVZAzFuQ8m2k9w/viewform?embedded=true" width="600" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    </div>
                 </div>
-            </div>
-            <!-- /.row -->             
+                <!-- /.Column1 -->      
+                
+                <!-- Column1 -->
+                <div class="col-sm-6 text-center">
+                    <h2>Step 2</h2>
+                    <hr class="small">
+                    <div class="col-lg-8 col-lg-offset-2">
+                       <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=true" width="640" height="300" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+                    </div>
+                </div>
+                <!-- /.Column1 --> 
+
+            </div>       
         </div>
     </section>
-    <!-- /.Startups -->
-
-
-    <!-- Projects -->
-    <section id="projects" class="about">
-        <div class="container">
-            <div class="row text-center">
-                <h2>Step 2</h2>
-                <hr class="small">
-            </div>
-
-            <!-- Project Row -->
-            <div class="row text-center">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=true" width="640" height="300" frameborder="0" marginheight="0" marginwidth="0"></iframe>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-    </section>
-    <!-- /.Projects -->
-
+    <!-- /.Placeholder1 -->
 
 
     <!-- Footer -->
