Update to 2023 and add Adsense

--- a/404.html
+++ b/404.html
@@ -47,6 +47,10 @@
           ga('send', 'pageview');
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4184399292240124"
+     crossorigin="anonymous">     
+    </script>
+
 </head>
 
 <body>
@@ -131,7 +135,7 @@
                         </li>                   
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Dudon Wai ~ 2022</p>
+                    <p class="text-muted">Dudon Wai ~ 2023</p>
                 </div>
             </div>
         </div>
