--- a/write.html
+++ b/write.html
@@ -47,6 +47,10 @@
           ga('send', 'pageview');
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4184399292240124"
+     crossorigin="anonymous">     
+    </script>
+
 </head>
 
 <body>
@@ -479,7 +483,7 @@
                             <a href="https://medium.com/@dudonwai" target="_blank"><i class="fa fa-medium fa-fw fa-3x"></i></a>
                         </li>                   
                     </ul>
-                    <p class="text-muted">Want to reach out? Send me a message at <a href="mailto:d@dudonwai.com?Subject=Hello" target="_top">d@dudonwai.com</a><br>Dudon Wai ~ 2022</p>   
+                    <p class="text-muted">Want to reach out? Send me a message at <a href="mailto:d@dudonwai.com?Subject=Hello" target="_top">d@dudonwai.com</a><br>Dudon Wai ~ 2023</p>   
                 </div>
             </div>
         </div>
